--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Odin Landing</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="header">
 		Header Logo
-		<a>header link one</a>
-		<a>header link two</a>
-		<a>header link three</a>
+		<ul>
+			<li><a href="./index.html">header link one</a></li>
+			<li><a href="./index.html">header link two</a></li>
+			<li><a href="./index.html">header link three</a></li>
+		</ul>
 	</div>
 
 	<div class="hero">
 		<div class="left">
 			<div class="heromain">This website is awesome</div>
-			<div class="herosecond">This websit has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+			<div class="herosecond">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
 			<button class="herobutt">Sign up</button>
 		</div>
 		<img class="heroimg" src="./images/ninbendo.jpg" alt="a picture of some ninbendo chars">
@@ -47,7 +49,7 @@
 	</div>
 
 	<div class="quote">
-		<div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, o rmaybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+		<div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
 		<div class="quoteauthor">-Thor, god of Thunder</div>
 	</div>
 
